--- a/QuickChat/gradle/libs.versions.toml
+++ b/QuickChat/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ firebaseCrashlyticsBuildtools = "2.9.9"
 hilt-compose = "1.2.0"
 coil = "2.6.0"
 material3Android = "1.2.1"
+navigation-compose = "2.8.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +38,7 @@ dagger-hilt-compose = { module = "androidx.hilt:hilt-navigation-compose", versio
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+androidx-navigation = { module ="androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
